--- a/admin.html
+++ b/admin.html
@@ -95,9 +95,33 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>إضافة منتج جديد</h1>
+    <div class="container" id="login-view">
+        <h1>تسجيل دخول المسؤول</h1>
+        <form id="login-form">
+            <div class="form-group">
+                <label>البريد الإلكتروني</label>
+                <input type="email" id="login-email" required>
+            </div>
+            <div class="form-group">
+                <label>كلمة المرور</label>
+                <input type="password" id="login-password" required>
+            </div>
+            <button type="submit" class="btn">دخول</button>
+        </form>
+        <a href="./index.html"
+            style="display:block; text-align:center; margin-top:1.5rem; color:var(--text); opacity:0.5;">العودة
+            للموقع</a>
+    </div>
+
+    <div class="container" id="admin-content" style="display:none;">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:2rem;">
+            <h1>لوحة التحكم</h1>
+            <button id="logout-btn"
+                style="background:none; border:1px solid #ff3e3e; color:#ff3e3e; padding:5px 15px; cursor:pointer; border-radius:4px;">خروج</button>
+        </div>
+
         <form id="add-product-form">
+            <h3>إضافة منتج جديد</h3>
             <div class="form-group">
                 <label>اسم المنتج</label>
                 <input type="text" id="p-name" required>
@@ -107,18 +131,18 @@
                 <input type="url" id="p-image" placeholder="https://example.com/image.jpg" required>
             </div>
             <div class="form-group">
-                <label>المقاسات المتاحة (افصل بينها بفاصلة)</label>
+                <label>المقاسات المتاحة (S, M, L...)</label>
                 <input type="text" id="p-sizes" placeholder="S, M, L, XL">
             </div>
             <div class="form-group">
-                <label>السعر الحقيقي (بعد الخصم)</label>
+                <label>السعر (بعد الخصم)</label>
                 <input type="number" id="p-price-now" required>
             </div>
             <div class="form-group">
                 <label>السعر قبل الخصم (اختياري)</label>
                 <input type="number" id="p-price-before">
             </div>
-            <button type="submit" class="btn">إضافة المنتج إلى الموقع</button>
+            <button type="submit" class="btn">إضافة المنتج</button>
         </form>
 
         <div class="product-list" id="admin-product-list">
