--- a/admin.html
+++ b/admin.html
@@ -100,11 +100,11 @@
         <form id="login-form">
             <div class="form-group">
                 <label>البريد الإلكتروني</label>
-                <input type="email" id="login-email" required>
+                <input type="email" id="login-email" required placeholder="example@mail.com">
             </div>
             <div class="form-group">
                 <label>كلمة المرور</label>
-                <input type="password" id="login-password" required>
+                <input type="password" id="login-password" required placeholder="••••••••">
             </div>
             <button type="submit" class="btn">دخول</button>
         </form>
@@ -113,47 +113,113 @@
             للموقع</a>
     </div>
 
-    <div class="container" id="admin-content" style="display:none;">
+    <div class="container" id="admin-content" style="display:none; max-width: 800px;">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:2rem;">
             <h1>لوحة التحكم</h1>
             <button id="logout-btn"
                 style="background:none; border:1px solid #ff3e3e; color:#ff3e3e; padding:5px 15px; cursor:pointer; border-radius:4px;">خروج</button>
         </div>
 
-        <form id="add-product-form">
-            <h3>إضافة منتج جديد</h3>
-            <div class="form-group">
-                <label>اسم المنتج</label>
-                <input type="text" id="p-name" required>
-            </div>
-            <div class="form-group">
-                <label>رابط الصورة</label>
-                <input type="url" id="p-image" placeholder="https://example.com/image.jpg" required>
-            </div>
-            <div class="form-group">
-                <label>المقاسات المتاحة (S, M, L...)</label>
-                <input type="text" id="p-sizes" placeholder="S, M, L, XL">
-            </div>
-            <div class="form-group">
-                <label>السعر (بعد الخصم)</label>
-                <input type="number" id="p-price-now" required>
-            </div>
-            <div class="form-group">
-                <label>السعر قبل الخصم (اختياري)</label>
-                <input type="number" id="p-price-before">
-            </div>
-            <button type="submit" class="btn">إضافة المنتج</button>
-        </form>
+        <div
+            style="display:flex; gap:10px; margin-bottom:2rem; border-bottom:1px solid var(--border); padding-bottom:10px;">
+            <button class="tab-btn active" onclick="showTab('products-tab')">إدارة المنتجات</button>
+            <button class="tab-btn" onclick="showTab('orders-tab')">الطلبات الواردة</button>
+        </div>
 
-        <div class="product-list" id="admin-product-list">
-            <h2>المنتجات الحالية</h2>
-            <div id="products-container"></div>
+        <!-- Products Tab -->
+        <div id="products-tab" class="tab-content">
+            <form id="add-product-form"
+                style="background:#1a1a1a; padding:1.5rem; border-radius:8px; margin-bottom:2rem;">
+                <h3>إضافة منتج جديد</h3>
+                <div class="form-group">
+                    <label>اسم المنتج</label>
+                    <input type="text" id="p-name" required>
+                </div>
+                <div class="form-group">
+                    <label>رابط الصورة</label>
+                    <input type="url" id="p-image" required>
+                </div>
+                <div class="form-group">
+                    <label>المقاسات (S, M, L...)</label>
+                    <input type="text" id="p-sizes" placeholder="S, M, L, XL">
+                </div>
+                <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
+                    <div class="form-group">
+                        <label>السعر الحالي</label>
+                        <input type="number" id="p-price-now" required>
+                    </div>
+                    <div class="form-group">
+                        <label>قبل الخصم</label>
+                        <input type="number" id="p-price-before">
+                    </div>
+                </div>
+                <button type="submit" class="btn">إضافة المنتج</button>
+            </form>
+
+            <div class="product-list">
+                <h3>المنتجات الحالية</h3>
+                <div id="products-container"></div>
+            </div>
+        </div>
+
+        <!-- Orders Tab -->
+        <div id="orders-tab" class="tab-content" style="display:none;">
+            <h3>سجل الطلبات</h3>
+            <div id="orders-container">
+                <p style="opacity:0.5; text-align:center;">جاري تحميل الطلبات...</p>
+            </div>
         </div>
 
         <a href="./index.html"
             style="display:block; text-align:center; margin-top:2rem; color:var(--text); opacity:0.5;">العودة للموقع</a>
     </div>
 
+    <style>
+        .tab-btn {
+            background: none;
+            border: none;
+            color: var(--text);
+            opacity: 0.5;
+            cursor: pointer;
+            padding: 10px 20px;
+            font-weight: 800;
+        }
+
+        .tab-btn.active {
+            opacity: 1;
+            border-bottom: 2px solid var(--accent);
+        }
+
+        .order-card {
+            background: #1a1a1a;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+            border: 1px solid var(--border);
+        }
+
+        .order-header {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #333;
+            padding-bottom: 5px;
+        }
+
+        .order-details {
+            font-size: 0.9rem;
+            opacity: 0.8;
+        }
+    </style>
+
+    <script>
+        function showTab(tabId) {
+            document.querySelectorAll('.tab-content').forEach(t => t.style.display = 'none');
+            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+            document.getElementById(tabId).style.display = 'block';
+            event.currentTarget.classList.add('active');
+        }
+    </script>
     <script type="module" src="./src/admin.js"></script>
 </body>
 
