--- a/admin.html
+++ b/admin.html
@@ -18,15 +18,16 @@
             font-family: 'Outfit', sans-serif;
             background: var(--bg);
             color: var(--text);
-            padding: 2rem;
+            padding: 1rem;
+            margin: 0;
         }
 
         .container {
-            max-width: 600px;
-            margin: 0 auto;
+            max-width: 800px;
+            margin: 2rem auto;
             background: #111;
             padding: 2rem;
-            border-radius: 8px;
+            border-radius: 12px;
             border: 1px solid var(--border);
         }
 
@@ -36,13 +37,14 @@
         }
 
         .form-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: 1.2rem;
         }
 
         label {
             display: block;
             margin-bottom: 0.5rem;
-            opacity: 0.8;
+            opacity: 0.7;
+            font-size: 0.9rem;
         }
 
         input,
@@ -52,7 +54,8 @@
             background: #000;
             border: 1px solid var(--border);
             color: #fff;
-            border-radius: 4px;
+            border-radius: 6px;
+            box-sizing: border-box;
         }
 
         .btn {
@@ -63,129 +66,34 @@
             border: none;
             font-weight: 800;
             cursor: pointer;
-            border-radius: 4px;
+            border-radius: 6px;
             margin-top: 1rem;
         }
 
-        .btn:hover {
-            opacity: 0.9;
+        .btn:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
         }
 
-        .product-list {
-            margin-top: 3rem;
-        }
-
-        .product-item {
+        /* Tabs System */
+        .tabs-nav {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem;
+            gap: 10px;
+            margin-bottom: 2rem;
             border-bottom: 1px solid var(--border);
+            padding-bottom: 10px;
         }
 
-        .delete-btn {
-            background: #ff3e3e;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container" id="login-view">
-        <h1>تسجيل دخول المسؤول</h1>
-        <form id="login-form">
-            <div class="form-group">
-                <label>البريد الإلكتروني</label>
-                <input type="email" id="login-email" required placeholder="example@mail.com">
-            </div>
-            <div class="form-group">
-                <label>كلمة المرور</label>
-                <input type="password" id="login-password" required placeholder="••••••••">
-            </div>
-            <button type="submit" class="btn">دخول</button>
-        </form>
-        <a href="./index.html"
-            style="display:block; text-align:center; margin-top:1.5rem; color:var(--text); opacity:0.5;">العودة
-            للموقع</a>
-    </div>
-
-    <div class="container" id="admin-content" style="display:none; max-width: 800px;">
-        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:2rem;">
-            <h1>لوحة التحكم</h1>
-            <button id="logout-btn"
-                style="background:none; border:1px solid #ff3e3e; color:#ff3e3e; padding:5px 15px; cursor:pointer; border-radius:4px;">خروج</button>
-        </div>
-
-        <div
-            style="display:flex; gap:10px; margin-bottom:2rem; border-bottom:1px solid var(--border); padding-bottom:10px;">
-            <button class="tab-btn active" onclick="showTab('products-tab')">إدارة المنتجات</button>
-            <button class="tab-btn" onclick="showTab('orders-tab')">الطلبات الواردة</button>
-        </div>
-
-        <!-- Products Tab -->
-        <div id="products-tab" class="tab-content">
-            <form id="add-product-form"
-                style="background:#1a1a1a; padding:1.5rem; border-radius:8px; margin-bottom:2rem;">
-                <h3>إضافة منتج جديد</h3>
-                <div class="form-group">
-                    <label>اسم المنتج</label>
-                    <input type="text" id="p-name" required>
-                </div>
-                <div class="form-group">
-                    <label>صورة المنتج (اختر من جهازك)</label>
-                    <input type="file" id="p-image-file" accept="image/*" required>
-                    <div id="upload-progress" style="display:none; margin-top:5px; font-size:0.8rem; color: #44ff44;">
-                        جاري رفع الصورة... <span id="progress-pct">0%</span></div>
-                </div>
-        </div>
-        <div class="form-group">
-            <label>المقاسات (S, M, L...)</label>
-            <input type="text" id="p-sizes" placeholder="S, M, L, XL">
-        </div>
-        <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
-            <div class="form-group">
-                <label>السعر الحالي</label>
-                <input type="number" id="p-price-now" required>
-            </div>
-            <div class="form-group">
-                <label>قبل الخصم</label>
-                <input type="number" id="p-price-before">
-            </div>
-        </div>
-        <button type="submit" class="btn">إضافة المنتج</button>
-        </form>
-
-        <div class="product-list">
-            <h3>المنتجات الحالية</h3>
-            <div id="products-container"></div>
-        </div>
-    </div>
-
-    <!-- Orders Tab -->
-    <div id="orders-tab" class="tab-content" style="display:none;">
-        <h3>سجل الطلبات</h3>
-        <div id="orders-container">
-            <p style="opacity:0.5; text-align:center;">جاري تحميل الطلبات...</p>
-        </div>
-    </div>
-
-    <a href="./index.html"
-        style="display:block; text-align:center; margin-top:2rem; color:var(--text); opacity:0.5;">العودة للموقع</a>
-    </div>
-
-    <style>
         .tab-btn {
             background: none;
             border: none;
             color: var(--text);
-            opacity: 0.5;
+            opacity: 0.4;
             cursor: pointer;
-            padding: 10px 20px;
+            padding: 10px 15px;
             font-weight: 800;
+            font-size: 1rem;
+            transition: 0.3s;
         }
 
         .tab-btn.active {
@@ -193,11 +101,34 @@
             border-bottom: 2px solid var(--accent);
         }
 
+        .tab-content {
+            display: none;
+            animation: fadeIn 0.3s ease;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Items Lists */
+        .product-item,
         .order-card {
             background: #1a1a1a;
-            padding: 1rem;
+            padding: 15px;
             border-radius: 8px;
-            margin-bottom: 1rem;
+            margin-bottom: 12px;
             border: 1px solid var(--border);
         }
 
@@ -206,23 +137,92 @@
             justify-content: space-between;
             margin-bottom: 10px;
             border-bottom: 1px solid #333;
-            padding-bottom: 5px;
-        }
-
-        .order-details {
-            font-size: 0.9rem;
-            opacity: 0.8;
+            padding-bottom: 8px;
         }
     </style>
+</head>
 
-    <script>
-        function showTab(tabId) {
-            document.querySelectorAll('.tab-content').forEach(t => t.style.display = 'none');
-            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById(tabId).style.display = 'block';
-            event.currentTarget.classList.add('active');
-        }
-    </script>
+<body>
+
+    <!-- Login View -->
+    <div class="container" id="login-view">
+        <h1>تسجيل دخول المسؤول</h1>
+        <form id="login-form">
+            <div class="form-group">
+                <label>البريد الإلكتروني</label>
+                <input type="email" id="login-email" required placeholder="modyelraik90@gmail.com">
+            </div>
+            <div class="form-group">
+                <label>كلمة المرور</label>
+                <input type="password" id="login-password" required placeholder="••••••••">
+            </div>
+            <button type="submit" class="btn" id="login-submit-btn">دخول</button>
+        </form>
+        <a href="./index.html"
+            style="display:block; text-align:center; margin-top:2rem; color:var(--text); opacity:0.4; text-decoration:none;">العودة
+            للموقع</a>
+    </div>
+
+    <!-- Main Dashboard (Admin Content) -->
+    <div class="container" id="admin-content" style="display:none;">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:2rem;">
+            <h2 style="margin:0;">Trico Dashboard</h2>
+            <button id="logout-btn"
+                style="background:none; border:1px solid #ff3e3e; color:#ff3e3e; padding:6px 15px; cursor:pointer; border-radius:6px; font-weight:600;">خروج</button>
+        </div>
+
+        <!-- Tab Navigation -->
+        <div class="tabs-nav">
+            <button class="tab-btn active" data-tab="products-tab">إدارة المنتجات</button>
+            <button class="tab-btn" data-tab="orders-tab">الطلبات الواردة</button>
+        </div>
+
+        <!-- Tab 1: Products -->
+        <div id="products-tab" class="tab-content active">
+            <form id="add-product-form"
+                style="background:#000; padding:1.5rem; border-radius:8px; margin-bottom:2rem; border:1px solid #222;">
+                <h3 id="form-title">إضافة منتج جديد</h3>
+                <div class="form-group">
+                    <label>اسم المنتج</label>
+                    <input type="text" id="p-name" required>
+                </div>
+                <div class="form-group">
+                    <label>صورة المنتج (من الجهاز)</label>
+                    <input type="file" id="p-image-file" accept="image/*">
+                    <p id="upload-status" style="display:none; color: #44ff44; font-size:0.8rem; margin-top:5px;">جاري
+                        المعالجة...</p>
+                </div>
+                <div class="form-group">
+                    <label>المقاسات المتاحة (S, M, L...)</label>
+                    <input type="text" id="p-sizes" placeholder="S, M, L, XL">
+                </div>
+                <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
+                    <div class="form-group">
+                        <label>السعر الحالي</label>
+                        <input type="number" id="p-price-now" required>
+                    </div>
+                    <div class="form-group">
+                        <label>السعر قبل الخصم</label>
+                        <input type="number" id="p-price-before">
+                    </div>
+                </div>
+                <button type="submit" class="btn" id="product-submit-btn">حفظ المنتج</button>
+            </form>
+
+            <div id="products-container">
+                <p style="text-align:center; opacity:0.3;">جاري تحميل المنتجات...</p>
+            </div>
+        </div>
+
+        <!-- Tab 2: Orders -->
+        <div id="orders-tab" class="tab-content">
+            <div id="orders-container">
+                <p style="text-align:center; opacity:0.3;">جاري تحميل الطلبات الواردة...</p>
+            </div>
+        </div>
+
+    </div>
+
     <script type="module" src="./src/admin.js"></script>
 </body>
 
