--- a/admin.html
+++ b/admin.html
@@ -164,62 +164,48 @@
     </div>
 
     <!-- Main Dashboard (Admin Content) -->
-    <div class="container" id="admin-content" style="display:none;">
+    <div id="admin-content" style="display:none;">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:2rem;">
-            <h2 style="margin:0;">Trico Dashboard</h2>
+            <h2 style="margin:0;">إدارة المنتجات</h2>
             <button id="logout-btn"
                 style="background:none; border:1px solid #ff3e3e; color:#ff3e3e; padding:6px 15px; cursor:pointer; border-radius:6px; font-weight:600;">خروج</button>
         </div>
 
-        <!-- Tab Navigation -->
-        <div class="tabs-nav">
-            <button class="tab-btn active" data-tab="products-tab">إدارة المنتجات</button>
-            <button class="tab-btn" data-tab="orders-tab">الطلبات الواردة</button>
-        </div>
-
-        <!-- Tab 1: Products -->
-        <div id="products-tab" class="tab-content active">
-            <form id="add-product-form"
-                style="background:#000; padding:1.5rem; border-radius:8px; margin-bottom:2rem; border:1px solid #222;">
-                <h3 id="form-title">إضافة منتج جديد</h3>
-                <div class="form-group">
-                    <label>اسم المنتج</label>
-                    <input type="text" id="p-name" required>
-                </div>
-                <div class="form-group">
-                    <label>صورة المنتج (من الجهاز)</label>
-                    <input type="file" id="p-image-file" accept="image/*">
-                    <p id="upload-status" style="display:none; color: #44ff44; font-size:0.8rem; margin-top:5px;">جاري
-                        المعالجة...</p>
-                </div>
-                <div class="form-group">
-                    <label>المقاسات المتاحة (S, M, L...)</label>
-                    <input type="text" id="p-sizes" placeholder="S, M, L, XL">
-                </div>
-                <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
-                    <div class="form-group">
-                        <label>السعر الحالي</label>
-                        <input type="number" id="p-price-now" required>
-                    </div>
-                    <div class="form-group">
-                        <label>السعر قبل الخصم</label>
-                        <input type="number" id="p-price-before">
-                    </div>
-                </div>
-                <button type="submit" class="btn" id="product-submit-btn">حفظ المنتج</button>
-            </form>
-
-            <div id="products-container">
-                <p style="text-align:center; opacity:0.3;">جاري تحميل المنتجات...</p>
+        <!-- Products Section -->
+        <form id="add-product-form"
+            style="background:#000; padding:1.5rem; border-radius:8px; margin-bottom:2rem; border:1px solid #222;">
+            <h3 id="form-title">إضافة منتج جديد</h3>
+            <div class="form-group">
+                <label>اسم المنتج</label>
+                <input type="text" id="p-name" required>
             </div>
-        </div>
-
-        <!-- Tab 2: Orders -->
-        <div id="orders-tab" class="tab-content">
-            <div id="orders-container">
-                <p style="text-align:center; opacity:0.3;">جاري تحميل الطلبات الواردة...</p>
+            <div class="form-group">
+                <label>صورة المنتج (من الجهاز)</label>
+                <input type="file" id="p-image-file" accept="image/*">
+                <p id="upload-status" style="display:none; color: #44ff44; font-size:0.8rem; margin-top:5px;">جاري
+                    المعالجة...</p>
             </div>
+            <div class="form-group">
+                <label>المقاسات المتاحة (S, M, L...)</label>
+                <input type="text" id="p-sizes" placeholder="S, M, L, XL">
+            </div>
+            <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
+                <div class="form-group">
+                    <label>السعر الحالي</label>
+                    <input type="number" id="p-price-now" required>
+                </div>
+                <div class="form-group">
+                    <label>السعر قبل الخصم</label>
+                    <input type="number" id="p-price-before">
+                </div>
+            </div>
+            <button type="submit" class="btn" id="product-submit-btn">حفظ المنتج</button>
+        </form>
+
+        <div id="products-container">
+            <p style="text-align:center; opacity:0.3;">جاري تحميل المنتجات...</p>
         </div>
+    </div>
 
     </div>
 
