--- a/index.html
+++ b/index.html
@@ -215,20 +215,23 @@
     }
 
     .size-btn {
-      padding: 5px 12px;
+      padding: 6px 14px;
       border: 1px solid var(--border-color);
       background: none;
       color: var(--text-color);
       border-radius: 4px;
-      font-size: 0.75rem;
+      font-size: 0.8rem;
       cursor: pointer;
       transition: var(--transition);
       opacity: 0.8;
+      position: relative;
+      z-index: 10;
     }
 
     .size-btn:hover {
       border-color: var(--text-color);
       opacity: 1;
+      background: rgba(128, 128, 128, 0.1);
     }
 
     .size-btn.active {
@@ -314,7 +317,7 @@
     </div>
   </div>
 
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="./src/main.js?v=1.1"></script>
 </body>
 
 </html>
