Admin: Optimized for mobile with 2-column grid and forced v1.2 cache refresh

--- a/index.html
+++ b/index.html
@@ -197,6 +197,40 @@
       .sidebar {
         width: 100%;
       }
+
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+
+      .products-section {
+        padding: 4rem 10px;
+      }
+
+      .product-info {
+        padding: 10px;
+      }
+
+      .product-info h3 {
+        font-size: 0.85rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      .p-price {
+        font-size: 0.8rem;
+      }
+
+      .size-btn {
+        padding: 4px 8px;
+        font-size: 0.7rem;
+      }
+
+      .add-btn {
+        padding: 0.6rem !important;
+        font-size: 0.7rem !important;
+      }
     }
   </style>
   <style>
@@ -317,7 +351,7 @@
     </div>
   </div>
 
-  <script type="module" src="./src/main.js?v=1.1"></script>
+  <script type="module" src="./src/main.js?v=1.2"></script>
 </body>
 
 </html>
