--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     </div>
   </div>
 
-  <script type="module" src="./src/main.js?v=1.2"></script>
+  <script type="module" src="./src/app.js?v=2.0"></script>
 </body>
 
 </html>
